Look-ahead diagnostics: -Dlookahead.stress repeats one play-out N times on T threads with per-step logs; -Dlookahead.preloadTokens
Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>